--- a/inst/pages/30_differential_abundance.qmd
+++ b/inst/pages/30_differential_abundance.qmd
@@ -129,9 +129,7 @@ threshold of 10%.
 
 ```{r prep-daa-data}
 # Agglomerate by genus and subset by prevalence
-tse <- subsetByPrevalentFeatures(tse,
-                            rank = "Genus",
-                            prevalence = 10 / 100)
+tse <- subsetByPrevalent(tse, rank = "Genus", prevalence = 10/100)
 
 # Transform count assay to relative abundances
 tse <- transformAssay(tse,
