Fixed some minor bugs

--- a/inst/pages/98_exercises.qmd
+++ b/inst/pages/98_exercises.qmd
@@ -1453,7 +1453,7 @@ data("GlobalPatterns", package = "mia")
 tse <- GlobalPatterns
 ```
 
-2. Get the most prevalent features. Subset your TreeSe to those features and the first 5.
+2. Get the most prevalent features. Subset your TreeSe to those features and the first 5 taxa.
 
 ```{r}
 #| label: heatmap-ex2
