bray curtis distance on counts instead of relabundance assay

--- a/inst/pages/20_beta_diversity.qmd
+++ b/inst/pages/20_beta_diversity.qmd
@@ -137,7 +137,7 @@ library(scater)
 tse <- runMDS(tse,
               FUN = vegan::vegdist,
               method = "bray",
-              assay.type = "relabundance",
+              assay.type = "counts",
               name = "MDS_bray")
 ```
 
@@ -263,6 +263,7 @@ Moreover, Patrick Schloss has demonstrated that rarefaction is "the only method 
 The function `vegan::avgdist` can use rarefaction to compute beta diversity:
 
 ```{r, fig.cap = "Non-rarefied (left) and rarefied (right) MDS plots based on the Bray-Curtis distances on the GlobalPatterns dataset."}
+
 tse <- runMDS(tse, 
         	assay.type="counts",
                 ntop = nrow(GlobalPatterns),
@@ -271,7 +272,7 @@ tse <- runMDS(tse,
 		distfun = vegan::vegdist, # Use vegdist beta diversity function
 		dmethod = "bray", # Bray-Curtis beta diversity (vegdist argument)
 		iterations = 10, # 10 iterations should be enough for beta diversity calculations
-		name = "MDS_bray_rarefied"
+		name = "MDS_bray_rarefied",
 )
 
 # Generate plots for non-rarefied and rarefied Bray-Curtis distances scaled by MDS
@@ -288,7 +289,7 @@ wrap_plots(plots) +
 all.equal(current = cor(as.vector(reducedDim(tse, "MDS_bray")),
                         as.vector(reducedDim(tse, "MDS_bray_rarefied"))),
           target = 1,
-          tolerance = 10**-2)
+          tolerance = 0.05)
 ```
 
 `ntop` is a `runMDS` option. Here it is set to total number of features in `GlobalPatterns` dataset so that they are not filtered. If ntop was not set to the total number of features, only the ntop features with highest variance would be used for dimensionality reduction and the other features would be filtered.
