correlation to association

--- a/inst/pages/23_multi-assay_analyses.qmd
+++ b/inst/pages/23_multi-assay_analyses.qmd
@@ -108,7 +108,7 @@ mae[[1]] <- transformAssay(mae[[1]], method = "log10", pseudocount = TRUE)
 rownames(mae[[1]]) <- getTaxonomyLabels(mae[[1]])
 
 # Cross correlates data sets
-correlations <- getCrossCorrelation(mae, 
+correlations <- getCrossAssociation(mae, 
                                     experiment1 = 1,
                                     experiment2 = 2,
                                     assay.type1 = "log10", 
