--- a/inst/pages/24_biclustering.Rmd
+++ b/inst/pages/24_biclustering.Rmd
@@ -132,7 +132,7 @@ mae[[1]] <- mae[[1]][ , colnames(mae[[2]]) ]
 # Make rownames unique since it is require by other steps
 rownames(mae[[1]]) <- make.unique(rownames(mae[[1]]))
 # Calculate correlations
-corr <- getCrossCorrelation(mae, 1, 2, 
+corr <- getCrossAssociation(mae, 1, 2, 
                               assay.type1 = "rclr", 
                               assay.type2 = "nmr", 
                               mode = "matrix", 
