--- a/inst/pages/06_packages.qmd
+++ b/inst/pages/06_packages.qmd
@@ -27,7 +27,7 @@ that support this framework.
 You can install all packages that are required to run every example in this book via the following command:
 
 ```{r eval=FALSE, message=FALSE}
-remotes::install_github("microbiome/OMA", dependencies = TRUE)
+remotes::install_github("microbiome/OMA", dependencies = TRUE, upgrade = TRUE)
 ```
 
 ### Installing specific packages {#sec-packages_specific}
