Install dependencies with dependencies = TRUE (#524)

--- a/inst/pages/06_packages.qmd
+++ b/inst/pages/06_packages.qmd
@@ -24,10 +24,10 @@ that support this framework.
 
 ## Package installation
 
-You can install all packages that're required to run every example in this book via the following command:
+You can install all packages that are required to run every example in this book via the following command:
 
 ```{r eval=FALSE, message=FALSE}
-remotes::install_github('microbiome/OMA')
+remotes::install_github("microbiome/OMA", dependencies = TRUE, upgrade = TRUE)
 ```
 
 ### Installing specific packages {#sec-packages_specific}
