--- a/inst/pages/04_containers.qmd
+++ b/inst/pages/04_containers.qmd
@@ -618,7 +618,7 @@ sample_meta_file_path <- system.file("extdata", "Mapping_file_ADHD_aggregated.cs
 tree_file_path <- system.file("extdata", "Data_humanization_phylo_aggregation.tre", package = "OMA")
 ```  
 
-Now we can read in the biom file and convert it into a `TreeSE` object. In addition, we retrieve the rank names from the prefixes of the feature names and then remove them with the `rank.from.prefix` and `taxa.prefix.rm` optional arguments.
+Now we can read in the biom file and convert it into a `TreeSE` object. In addition, we retrieve the rank names from the prefixes of the feature names and then remove them with the `rank.from.prefix` and `prefix.rm` optional arguments.
 
 ```{r}
 library(mia)
@@ -626,7 +626,7 @@ library(mia)
 # read biom and convert it to TreeSE
 tse <- importBIOM(biom_file_path,
                     rank.from.prefix = TRUE,
-                    taxa.prefix.rm = TRUE)
+                    prefix.rm = TRUE)
 
 # Check
 tse
