Update docs to use TRUE instead of T; remove disable.taxonomy
Signed-off-by: Daena Rys <rysdaena8@gmail.com>

--- a/inst/pages/10_manipulation.qmd
+++ b/inst/pages/10_manipulation.qmd
@@ -180,7 +180,7 @@ When total abundances of certain phyla are of relevance, the data is initially a
 
 ```{r}
 # Agglomerate by phylum
-tse_phylum <- tse %>% mergeFeaturesByRank(rank = "Phylum")
+tse_phylum <- tse %>% agglomerateByRank(rank = "Phylum")
 
 # Subset by feature and remove NAs
 tse_phylum_subset_by_feature <- tse_phylum[
@@ -250,7 +250,7 @@ remove those instances.
 
 ```{r}
 # Agglomerate data at Genus level 
-tse_genus <- mergeFeaturesByRank(tse, rank = "Genus")
+tse_genus <- agglomerateByRank(tse, rank = "Genus")
 # List bacteria that we want to include
 genera <- c("Class:Thermoprotei", 
             "Genus:Sulfolobus", 
