--- a/inst/pages/12_quality_control.qmd
+++ b/inst/pages/12_quality_control.qmd
@@ -108,7 +108,7 @@ can be applied to the resulting object.
 ```{r}
 # Agglomerate taxa abundances to Phylum level
 #and add the new table to the altExp slot
-altExp(tse,"Phylum") <- mergeFeaturesByRank(tse, "Phylum")
+altExp(tse,"Phylum") <- agglomerateByRank(tse, "Phylum")
 # Check prevalence for the Phylum abundance table 
 #from the altExp slot
 head(getPrevalence(altExp(tse,"Phylum"), detection = 1/100, 
@@ -126,7 +126,7 @@ head(getPrevalence(tse, rank = "Phylum", detection = 1/100,
 ```
 
 Note that, by default, `na.rm = TRUE` is used for agglomeration in
-`getPrevalence`, whereas the default for `mergeFeaturesByRank` is
+`getPrevalence`, whereas the default for `agglomerateByRank` is
 `FALSE` to prevent accidental data loss.
 
 If you only need the names of the prevalent taxa, `getPrevalent`
