--- a/inst/pages/19_visualization_techniques.qmd
+++ b/inst/pages/19_visualization_techniques.qmd
@@ -347,9 +347,8 @@ feature and sample clusters in a heatmap, along with further functionality.
 ```{r}
 #| label = "pheatmap1"
 # Agglomerate tse by phylum
-tse_phylum <- mergeFeaturesByRank(tse,
-                                rank = "Phylum",
-                                disable.taxonomy = TRUE)
+tse_phylum <- agglomerateByRank(tse,
+                                rank = "Phylum")
 
 # Add clr-transformation on samples
 tse_phylum <- transformAssay(tse_phylum, MARGIN = "samples", method = "clr", assay.type = "counts", pseudocount=1)
