--- a/inst/pages/23_multi-assay_analyses.qmd
+++ b/inst/pages/23_multi-assay_analyses.qmd
@@ -245,7 +245,7 @@ library(ggplot2)
 
 plot_list <- plot_variance_explained(model.trained,
                                      x = "view", y = "factor",
-                                     plot_total = T)
+                                     plot_total = TRUE)
 
 wrap_plots(plot_list, nrow = 2) +
   plot_annotation(title = "Variance Explained per factor and assay",
