--- a/inst/pages/04_containers.qmd
+++ b/inst/pages/04_containers.qmd
@@ -178,7 +178,7 @@ Let us first agglomerate the data to Phylum level. This yields a new
 `TreeSE` data object.
 
 ```{r altexp_agglomerate}
-tse_phylum <- mergeFeaturesByRank(tse, "Phylum", na.rm=TRUE)
+tse_phylum <- agglomerateByRank(tse, "Phylum", na.rm=TRUE)
 # Both have the same number of columns (samples)
 dim(tse)
 dim(tse_phylum)
