--- a/inst/pages/11_taxonomic_information.qmd
+++ b/inst/pages/11_taxonomic_information.qmd
@@ -181,17 +181,17 @@ assay(altExp(tse, "Family"), "counts")[1:5, 1:7]
 any taxonomic level listed in `mia::taxonomyRanks(tse)`.
 
 Rare taxa can also be aggregated into a single group "Other" instead of 
-filtering them out. A suitable function for this is `mergeFeaturesByPrevalence`.
+filtering them out. A suitable function for this is `agglomerateByRank`.
 The number of rare taxa is higher on the species level, which causes the need 
 for data agglomeration by prevalence.
 
 ```{r}
-altExp(tse, "Species_byPrevalence") <- mergeFeaturesByPrevalence(tse, 
+altExp(tse, "Species_byPrevalence") <- agglomerateByRank(tse, 
                                                                rank = "Species", 
                                                                other.label = "Other", 
                                                                prevalence = 5 / 100, 
                                                                detection = 1 / 100, 
-                                                               as.relative = T)
+                                                               as.relative = TRUE)
 altExp(tse, "Species_byPrevalence")
 
 assay(altExp(tse, "Species_byPrevalence"), "relabundance")[1:5, 1:3]
