--- a/inst/pages/20_beta_diversity.qmd
+++ b/inst/pages/20_beta_diversity.qmd
@@ -431,7 +431,7 @@ data at the Genus level and identify the dominant taxa for each sample.
 
 ```{r}
 # Agglomerate to genus level
-tse_genus <- mergeFeaturesByRank(tse,
+tse_genus <- agglomerateByRank(tse,
                                  rank = "Genus")
 
 # Convert to relative abundances
@@ -555,7 +555,7 @@ communities.
 
 ```{r}
 # Agglomerate data to Species level
-tse <- mergeFeaturesByRank(tse,
+tse <- agglomerateByRank(tse,
                            rank = "Species")
 
 # Set seed for reproducibility
