--- a/inst/pages/21_microbiome_community.qmd
+++ b/inst/pages/21_microbiome_community.qmd
@@ -27,7 +27,7 @@ library(miaViz)
 tse <- transformAssay(tse, assay.type = "counts", method = "relabundance")
 
 # Getting top taxa on a Phylum level
-tse_phylum <- mergeFeaturesByRank(tse, rank ="Phylum", disable.taxonomy=TRUE)
+tse_phylum <- agglomerateByRank(tse, rank ="Phylum", disable.taxonomy=TRUE)
 top_taxa <- getTop(tse_phylum,top = 5, assay.type = "relabundance")
 
 # Renaming the "Phylum" rank to keep only top taxa and the rest to "Other"
