--- a/inst/pages/MMUPHin_meta_analysis.qmd
+++ b/inst/pages/MMUPHin_meta_analysis.qmd
@@ -274,7 +274,7 @@ for (i in 1:length(transform)) {
                        data = data_meta,
                        control = list(analysis_method = 'LM', transform = transform[i]))
   
-  num[i] <- sum(fit_lm_meta$meta_fits$qval.fdr < 0.05, na.rm = T)
+  num[i] <- sum(fit_lm_meta$meta_fits$qval.fdr < 0.05, na.rm = TRUE)
 }
 
 print(num)
@@ -447,7 +447,7 @@ for (i in 1:length(transform)) {
                        data = data_meta,
                        control = list(analysis_method = 'LM', transform = transform[i]))
   
-  num[i] <- sum(fit_lm_meta$meta_fits$pval < 0.05, na.rm = T)
+  num[i] <- sum(fit_lm_meta$meta_fits$pval < 0.05, na.rm = TRUE)
 }
 
 print(num)
@@ -461,7 +461,7 @@ fit_lm_meta2 <- lm_meta(feature_abd = data_abd_adj,
                        data = data_meta,
                        control = list(analysis_method = 'CPLM', transform = 'NONE'))
 
-num <- sum(fit_lm_meta2$meta_fits$pval < 0.05, na.rm = T)
+num <- sum(fit_lm_meta2$meta_fits$pval < 0.05, na.rm = TRUE)
 print(num)
 
 ```
