--- a/inst/pages/add-comm-typing.Rmd
+++ b/inst/pages/add-comm-typing.Rmd
@@ -143,7 +143,7 @@ library(miaViz)
 # Only consider Forest samples
 tse <- tse[, colData(tse)$Country == "Finland"]
 # Agglomerate to phylum level
-tse <- mergeFeaturesByRank(tse, rank = "Phylum", agglomerateTree=TRUE)
+tse <- agglomerateByRank(tse, rank = "Phylum", agglomerateTree=TRUE)
 # Get top taxa
 rel_taxa <- getTop(tse, top = 8, assay.type = "counts")
 # Take only the top taxa
@@ -164,7 +164,7 @@ library(pheatmap)
 library(grid)
 library(RColorBrewer)
 # Agglomerate to phylum level
-tse <- mergeFeaturesByRank(tse, rank = "Phylum", agglomerateTree=TRUE)
+tse <- agglomerateByRank(tse, rank = "Phylum", agglomerateTree=TRUE)
 # Take only the top taxa
 tse <- tse[is.element(rownames(tse), rel_taxa),]
 
@@ -288,13 +288,13 @@ Now, let's divide the subjects into their respective clusters.
 
 ```{r create clusters}
 library(cluster)
-tse2 <- mergeFeaturesByRank(tse, rank = "Phylum", agglomerateTree=TRUE)
+tse2 <- agglomerateByRank(tse, rank = "Phylum", agglomerateTree=TRUE)
 
 # assume 6 clusters
 K <- 6
 x <- ord[, 1:NDIM]
 
-clust <- as.factor(pam(x, k = K, cluster.only = T))
+clust <- as.factor(pam(x, k = K, cluster.only = TRUE))
 # assign CSTs
 colData(tse2)$CST <- clust
 CSTs <- as.character(seq(K))
@@ -390,7 +390,7 @@ Let's cluster the data with DMM clustering.
 # Runs model and calculates the most likely number of clusters from 1 to 7.
 # Since this is a large dataset it takes a long time to run
 # For this reason we use only a subset of the data agglomerated to the phylum level
-tse <- mergeFeaturesByRank(tse, rank = "Phylum", agglomerateTree=TRUE)
+tse <- agglomerateByRank(tse, rank = "Phylum", agglomerateTree=TRUE)
 tse_dmn <- runDMN(tse, name = "DMN", k = 1:7)
 ```
 
