--- a/inst/assets/bibliography.bib
+++ b/inst/assets/bibliography.bib
@@ -2173,3 +2173,15 @@ year = {2014}
     doi = {10.1128/msphere.00355-23},
     year = {2024}
 }
+
+@article{Rajaram2010,
+  title={NeatMap - non-clustering heat map alternatives in R},
+  author={Rajaram, S. and Oono, Y.},
+  journal={BMC Bioinformatics},
+  volume={11},
+  pages={45},
+  year={2010},
+  publisher={BioMed Central},
+  doi={10.1186/1471-2105-11-45},
+  url={https://bmcbioinformatics.biomedcentral.com/articles/10.1186/1471-2105-11-45}
+}
